[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/GUI/game_logo_double_shadow.png" type="Texture" id=2]
[ext_resource path="res://Assets/Themes/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Audio/Music/main-menu-theme.ogg" type="AudioStream" id=4]
[ext_resource path="res://GUI/Credits.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI/Settings.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/MainMenu.gd" type="Script" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 7 )
main_hub_scene_path = "res://Game/MainHub.tscn"

[node name="FPSLabel" type="Label" parent="." groups=["fps_displayer", "resizable_gui"]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 17.0
margin_right = -20.0
margin_bottom = 34.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 80, 0 )
text = "0 FPS"
align = 2
valign = 1

[node name="GameLogo" type="TextureRect" parent="."]
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.5
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Menu" type="Control" parent="."]
anchor_left = 0.35
anchor_top = 0.58
anchor_right = 0.65
anchor_bottom = 0.95

[node name="NewGameButton" type="Button" parent="Menu"]
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 0.1
text = "New Game"

[node name="ContinueButton" type="Button" parent="Menu"]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.3
text = "Continue"

[node name="SettingsButton" type="Button" parent="Menu"]
anchor_left = 0.3
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.5
text = "Settings"

[node name="CreditsButton" type="Button" parent="Menu"]
anchor_left = 0.3
anchor_top = 0.6
anchor_right = 0.7
anchor_bottom = 0.7
text = "Credits"

[node name="ExitButton" type="Button" parent="Menu"]
anchor_left = 0.3
anchor_top = 0.8
anchor_right = 0.7
anchor_bottom = 0.9
text = "Exit"

[node name="Settings" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Credits" parent="." instance=ExtResource( 5 )]
visible = false

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"
